# django-quenv

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
quenv/: __init__.py  admin.py  apps.py  djantic.py  licenses.py  managers.py  models.py  pydantic.py  tests.py  views.py
quenv/management/: __init__.py
quenv/management/commands/: __init__.py  quenv.py
quenv/migrations/: 0001_initial.py  0002_alter_filepath_path_alter_license_spdx_url_and_more.py  0002_auto_20200731_1947.py  0003_auto_20200801_1912.py  0003_rename_datetime_scandate_start_timestamp.py  __init__.py
src/django_quenv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
