[metadata]
name = django-quenv
version = 1.0.0
author = George Tantiras
description = Helps the process of license housekeeping in a Django project, the spdx way.
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raratiru/django-quenv
project_urls =
    Bug Tracker = https://github.com/raratiru/django-quenv/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
# package_dir =
#     = src
packages = find:
python_requires = >=3.7
install_requires =
    django
    djantic

# [options.packages.find]
# where = src
